--- a/client/src/layout/Dashboard/Company/Company.scss
+++ b/client/src/layout/Dashboard/Company/Company.scss
@@ -1,4 +1,5 @@
 @import '../../../App.scss';
+//company submenu styled in Dashboard.scss
 .company-details {
     text-align: left;
     font-size: 1.4rem;
@@ -23,4 +24,10 @@
 }
 .company-details__info {
     white-space: pre;
+}
+.company-tasks {
+    padding: 5rem 15rem;
+    fieldset {
+        margin-bottom: 0;
+    }
 }
