Tasks update and delete functionality

--- a/client/src/layout/Dashboard/Company/Company.scss
+++ b/client/src/layout/Dashboard/Company/Company.scss
@@ -48,6 +48,9 @@
         text-align: left;
         width: 30rem;
     }
+    button:fcous {
+        border: dashed 0.1rem #111;
+    }
 }
 .task-table__icon {
     height: 2rem;
