--- a/client/src/layout/Dashboard/Company/Company.scss
+++ b/client/src/layout/Dashboard/Company/Company.scss
@@ -41,6 +41,7 @@
         padding: 0.7rem 1rem;
         text-align: center;
     }
+
     tr {
         vertical-align: middle;
     }
@@ -48,14 +49,16 @@
         text-align: left;
         width: 30rem;
     }
-    button:fcous {
-        border: dashed 0.1rem #111;
-    }
 }
 .task-table__icon {
     height: 2rem;
     opacity: 0.5;
 }
+.task-table__btn:focus {
+    transform: scale(1.7) translateY(0.1rem);
+    transition: 1s;
+}
+
 .task-update:hover,
 .task-delete:hover {
     .task-table__icon {
