--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -312,14 +312,14 @@ fieldset {
     z-index: 2;
 }
 .input-checkbox__checkmark:after {
-    content: '\2713';
+    content: '\25A0';
     position: absolute;
     display: none;
-    font-size: 4rem;
+    font-size: 5rem;
     color: $COLOR_THEME;
     font-weight: bold;
-    line-height: 1.2rem;
-    left: 0.2rem;
+    line-height: 2rem;
+    left: -0.2rem;
 }
 .input-checkbox:hover .input-checkbox__checkmark {
     // background-color: #ccc;
